<resources>
    <string name="app_name">Fallen Angels</string>
    <string name="get_started">Get Started >></string>
    <string name="ask_sign_in">Wish to sign in?</string>
    <string name="log_in"><u>Log in here</u></string>
    <string name="forgot_pass"><u>Forgot password</u></string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="create_acc">Create Account</string>
    <string name="already_have_acc">Already have an account?</string>
    <string name="login">Login</string>
    <string name="account_created">Your account has been created.</string>
    <string name="verify_email">A verification link has been sent to your email. Please verify your account before logging in.</string>
    <string name="change_password">If you would like to change your password then please enter your email. A reset link will be sent.</string>
    <string name="latest_news">Latest News</string>
    <string name="covid_19">Covid-19 Miracle for our rescues.</string>
    <string name="home_1">At the Government announcement of the National Lockdown we realised we were in a desperate situation with over 350 dogs at the Farm and no way to feed them or care for them without our usual visitors or funds.</string>
    <string name="home_2">Our lockdown foster program was the first in our history and by March 26th over 200 dogs left the farm to go to their foster homes. With the addition of new litters, new rescues and pregnant mommies, that number quickly grew to approximately 275 dogs and puppies in foster care.</string>
    <string name="home_3">Since late March a little over 150 dogs that were in foster care have been adopted, half of those were young dogs or puppies but 50 % were mature adults dogs and 10 % were dogs with medical and behavioral issues.</string>
    <string name="home_4">That means that 77 dogs that would normally never have had a chance at the Farm, have found a home due to having been in Foster care. That is huge and we are immensely grateful to our fosters and adopters alike. We still have about 125 dogs in foster care, 25 of those are puppies that will or have already been adopted. Out of the 100 remaining dogs about half are potential foster fails, have applications or are with fosters that can keep them indefinitely.</string>
    <string name="home_5">All in all this has been a huge success and we would like to thank all of you for making this happen. Please join our Fallen Angels Lockdown Fosters Facebook page if you would like to follow our foster dogs and their amazing journeys.</string>
    <string name="home_6">For most of them, their story has just begun!</string>
    <string name="home_7">Map to Fallen Angels Pet Rescue Farm. (Please do not use Google Maps)</string>
    <string name="home_8">SOUTH AFRICA’S FALLEN ANGELS WIN FIRST BRIAN DAVIES AWARD FOR ANIMAL WELFARE</string>
    <string name="home_9">Named after legendary animal welfare pioneer Brian Davies, The Brian Davies Award is a new annual award made to an animal welfare organisation that has managed to significantly help animals, in difficult and challenging circumstances. It carries a $10,000.00 prize.</string>
    <string name="home_10">Finalists came from Greece, Uruguay and South Africa. Network for Animals (NFA) organised the awards and asked supporters to vote for the most deserving. More than 10,000 people voted.</string>
    <string name="home_11">Fallen Angels is a group of women who venture into South Africa’s poverty-stricken and lawless townships to treat, rescue and rehome street dogs. Their Fallen Angels shelter in the Western Cape now cares for 328 dogs.</string>
    <string name="home_12">Testimonials</string>
    <string name="home_13">“I went to visit today and I was struck by the friendliness of the staff and the lovely happy condition of the dogs. such a happy atmosphere all round. awesome bunch!”</string>
    <string name="home_14">- Jackie Wernberg</string>
    <string name="home_15">"Well done ladies. It was a fantastical day at Willowbridge yesterday. You are passionate caring amazing people"</string>
    <string name="home_16">- Adrian Hochman</string>
    <string name="home_17">Such an amazing shelter! We have adopted a doggo from here in the past &amp; he has grown so beautifully, we couldn"'"t imagine life without him!!! The love &amp; care you give these animals is amazing. keep up the good work! ♡"</string>
    <string name="home_18">- Linzey Marais</string>
    <string name="home_19">"We visited for the first time today and I just wanted to take all of the doggies home with me! Keep up the amazing heartwarming work you guys are doing and we WILL be back"</string>
    <string name="gall_1">Happy Homings</string>
    <string name="gall_2">Some of our furbabies in their very own, forever homes. This is what melts our hearts</string>
    <string name="gall_3">Before &amp; After</string>
    <string name="gall_4">Amazing what patience, love, nutrition and vet care can do ! Especially with your support and donations.</string>
    <string name="gall_5">Adoption Days</string>
    <string name="gall_6">Come for cuddles at our weekend adoption days. Keep an eye on our facebook page for where we are.</string>
    <string name="gall_7">Dog Walkers</string>
    <string name="gall_8">Our amazing doggy bootcamp volunteers. Join them every weekend bright and early on the farm.</string>
    <string name="gall_9">Farm Visitors</string>
    <string name="gall_10">Bring the kids and come spend some time with our doggies on our farm.</string>
    <string name="gall_11">Outreach Program</string>
    <string name="gall_12">Our Outreach Program entails partnering up with "Network For Animals" and provides us the opportunity to visit empoverished areas providing free, veterinary care, yummy food and rescue for animals in need. We also visit schools and educate children on pet care.</string>
    <string name="con_1">Get in Touch</string>
    <string name="con_2">Portion 25/19 of the farm Kleine Zoute Rivier 1063</string>
    <string name="con_3">Melkbosstrand. 7441</string>
    <string name="con_4">info@fallenangels.org.za</string>
    <string name="con_5">Tel:</string>
    <string name="con_6">084 482 0290 Office Hours</string>
    <string name="con_7">076 993 9670 (Shireen)</string>
    <string name="tc_instructions"><u>PLEASE READ THROUGH CAREFULLY BEFORE TAKING YOUR COMPANION HOME THIS IS A LEGAL DOCUMENT</u></string>
    <string name="f_1">1. That I am over the age of 21 years of age. </string>
    <string name="f_2">2. I have my own transport and am able to take my foster animal to the vet when necessary.</string>
    <string name="f_3">3. I understand that the organisation provides no guarantee as to the health of my foster animal, and that my foster animal may have medical needs, socialization problems, and not be housebroken. </string>
    <string name="f_4">4. I will not arrange or pay for, or otherwise cause, any elective veterinary procedure to be  performed on my foster animal during the period covered by this agreement, without the express verbal consent and vet booking of a senior organisation member.</string>
    <string name="f_5"> 5. I understand that Fallen Angels is a non profit organisation and relies entirely on donations. To this end, I agree, when taking my foster animal to the Fallen Angels vet for necessary medical treatment, that I will be responsible for the bill. </string>
    <string name="f_6">6. I understand that, once my foster has been adopted and the adoption fee paid, I may claim back veterinary expenses up to the value of the adoption fee, against proof of expenditure. </string>
    <string name="f_7">7. I agree to send photos to Fallen Angels when requested and bring my foster animal to adoption  days when requested.</string>
    <string name="f_8">8. I understand that I may only have my foster animal temporarily, if I decide to adopt the animal, I  will inform Fallen Angels immediately, complete the correct paperwork and pay the adoption fee. </string>
    <string name="f_9">9. I agree that I am fostering this animal for the organisation, and that I do not have any right of  ownership over my foster animal. I further agree that the organisation’s rights in and to my foster animal are superior to mine. I also agree to provide the organisations representatives, access to my home and property to check on my foster animal, at any time that I am in possession of my foster animal. </string>
    <string name="f_10">10. I agree to immediately return any foster animal in my care to the organisation, at the request of  the organisation at any time and for any reason. If the organisation is forced to undertake any  action to force this provision of the agreement, I agree to indemnify the organisation for all court costs and attorneys’ fees connected with such an action. </string>
    <string name="f_11">11. If I am planning to move at any time during the period covered by this agreement, I agree to  contact the organisation prior to my move, with new contact information. I understand that  the organisation has the right to request return of my foster animal based on such a change of residence, and agree that I will surrender my foster animal to the organisation immediately  upon request. </string>
    <string name="f_12">12. If at any point I can no longer, or do not want to continue to, provide care, food and shelter for my foster animal, I agree to contact the organisation Representative and arrange for surrender and return of my foster animal back to the organisation. </string>
    <string name="f_13">13. I agree to contact the organisation Representative with any and all questions or concerns about  my foster animal or the fostering program, as well as with updated contact information. I also  agree to contact the Representative with regular updates on the health status of my foster  animal. I agree that the foster animal will be taken to vets specified by the Organisation or  only to alternative vets only if I received verbal agreement to do so. I have no right to make  any medical decisions related to the animals health ,wellbeing or veterinary care without the consent of the organisations representative. </string>
    <string name="f_14">14. I agree that if I refuse to comply with any provision of this agreement, the organisation has the  right to terminate this agreement and also has the right to the immediate surrender and return of my foster animals. I further consent to provide the organisation representatives with access to my premises if necessary to facilitate the return.</string>
    <string name="f_15">15. I agree to do everything in my power to supply a safe environment for the foster animal and will   not at any time put the animal in harm’s way. If this is done I agree that the organisation has a right to claim negligence on my part. </string>
    <string name="f_16">16. All foster animals will be fed daily and will at all times have access to fresh clean water and  shaded shelter against the environmental elements. Animals under the age of 4 months will  be kept inside during the day and will sleep inside my home at night. Young animals are not to be left unattended outside for long periods of time.</string>
    <string name="f_17">17. I agree that I will send photos of my foster within one week from the date that they come into my care, provided that they are in the condition to be rehomed. If not, I agree that I will bring this under the attention of one of the organisation’s representatives.</string>
    <string name="f_18">18. I agree that I am not allowed to rehome any animal without the consent of the organisation’s representative. </string>
    <string name="f_19">19.  If you have any queries or concerns please email <b><font fgcolor="#2E46E1">info@fallenangels.org.za</font></b> or call Stefanie on 072 931 1102 or Shireen on 076 993 9670.</string>
</resources>