<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/custom_light_grey"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="370dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/backdrop_form_text">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView160"
                android:layout_width="287dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/poppins_regular"
                android:gravity="center_horizontal"
                android:text="@string/tc_instructions"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/textView168"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginStart="33dp"
                android:layout_marginTop="25dp"
                android:fontFamily="@font/poppins_regular"
                android:gravity="start"
                android:text="@string/f_1"
                android:textColor="@color/black"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/textView169"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:fontFamily="@font/poppins_regular"
                android:gravity="start"
                android:text="@string/f_2"
                android:textColor="@color/black"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/textView170"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:fontFamily="@font/poppins_regular"
                android:gravity="start"
                android:text="@string/f_3"
                android:textColor="@color/black"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/textView171"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:fontFamily="@font/poppins_regular"
                android:gravity="start"
                android:text="@string/f_4"
                android:textColor="@color/black"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/textView172"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:fontFamily="@font/poppins_regular"
                android:gravity="start"
                android:text="@string/f_5"
                android:textColor="@color/black"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/textView173"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:fontFamily="@font/poppins_regular"
                android:gravity="start"
                android:text="@string/f_6"
                android:textColor="@color/black"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/textView192"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:fontFamily="@font/poppins_regular"
                android:gravity="start"
                android:text="@string/f_7"
                android:textColor="@color/black"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/textView193"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:fontFamily="@font/poppins_regular"
                android:gravity="start"
                android:text="@string/f_8"
                android:textColor="@color/black"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/textView194"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:fontFamily="@font/poppins_regular"
                android:gravity="start"
                android:text="@string/f_9"
                android:textColor="@color/black"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/textView195"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:fontFamily="@font/poppins_regular"
                android:gravity="start"
                android:text="@string/f_10"
                android:textColor="@color/black"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/textView196"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:fontFamily="@font/poppins_regular"
                android:gravity="start"
                android:text="@string/f_11"
                android:textColor="@color/black"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/textView197"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:fontFamily="@font/poppins_regular"
                android:gravity="start"
                android:text="@string/f_12"
                android:textColor="@color/black"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/textView198"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:fontFamily="@font/poppins_regular"
                android:gravity="start"
                android:text="@string/f_13"
                android:textColor="@color/black"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/textView199"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:fontFamily="@font/poppins_regular"
                android:gravity="start"
                android:text="@string/f_14"
                android:textColor="@color/black"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/textView200"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:fontFamily="@font/poppins_regular"
                android:gravity="start"
                android:text="@string/f_15"
                android:textColor="@color/black"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/textView201"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:fontFamily="@font/poppins_regular"
                android:gravity="start"
                android:text="@string/f_16"
                android:textColor="@color/black"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/textView202"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:fontFamily="@font/poppins_regular"
                android:gravity="start"
                android:text="@string/f_17"
                android:textColor="@color/black"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/textView203"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:fontFamily="@font/poppins_regular"
                android:gravity="start"
                android:text="@string/f_18"
                android:textColor="@color/black"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/textView204"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:fontFamily="@font/poppins_regular"
                android:gravity="start"
                android:text="@string/f_19"
                android:textColor="@color/black"
                android:textSize="13sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/f_btnCloseRules"
                android:layout_width="166dp"
                android:layout_height="59dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dp"
                android:background="@drawable/btn_pink_rounded"
                android:fontFamily="@font/poppins_regular"
                android:text="Close"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="19sp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="24dp"
                android:layout_gravity="center_horizontal" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>