<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".others.ContactFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView92"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/poppins_semibold"
                android:gravity="center_horizontal"
                android:text="@string/con_1"
                android:textColor="@color/custom_pink"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView93"
                android:layout_width="297dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:fontFamily="@font/poppins_regular"
                android:gravity="center_horizontal"
                android:text="@string/con_2"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/textView94"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:fontFamily="@font/poppins_regular"
                android:gravity="center_horizontal"
                android:text="@string/con_3"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/textView95"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:fontFamily="@font/poppins_regular"
                android:gravity="center_horizontal"
                android:text="@string/con_4"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/textView96"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/poppins_regular"
                android:gravity="center_horizontal"
                android:text="@string/con_5"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/textView97"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:fontFamily="@font/poppins_regular"
                android:gravity="center_horizontal"
                android:text="@string/con_6"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/textView98"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:fontFamily="@font/poppins_regular"
                android:gravity="center_horizontal"
                android:text="@string/con_7"
                android:textColor="@color/black" />

            <ImageView
                android:id="@+id/imageView22"
                android:layout_width="303dp"
                android:layout_height="243dp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/img_con_1" />

            <ImageView
                android:id="@+id/imageView23"
                android:layout_width="303dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/img_con_qoute" />
        </LinearLayout>
    </ScrollView>
</FrameLayout>